devops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  labels:
    app: devops-app
spec:
  type: NodePort
  selector:
    app: devops-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  sessionAffinity: None
